Stop stashing the shared container